--- a/config/immortalwrt/2102/.config
+++ b/config/immortalwrt/2102/.config
@@ -187,8 +187,8 @@ CONFIG_GRUB_TIMEOUT="0"
 CONFIG_GRUB_TITLE="ImmortalWrt"
 CONFIG_ISO_IMAGES=y
 CONFIG_QCOW2_IMAGES=y
-CONFIG_VDI_IMAGES=y
-CONFIG_VMDK_IMAGES=y
+# CONFIG_VDI_IMAGES is not set
+# CONFIG_VMDK_IMAGES is not set
 CONFIG_VHDX_IMAGES=y
 CONFIG_TARGET_IMAGES_GZIP=y
 
@@ -2654,10 +2654,10 @@ CONFIG_PACKAGE_kmod-usb-net=y
 # CONFIG_PACKAGE_kmod-usb-net-aqc111 is not set
 CONFIG_PACKAGE_kmod-usb-net-asix=y
 CONFIG_PACKAGE_kmod-usb-net-asix-ax88179=y
-# CONFIG_PACKAGE_kmod-usb-net-cdc-eem is not set
+CONFIG_PACKAGE_kmod-usb-net-cdc-eem=y
 CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
-# CONFIG_PACKAGE_kmod-usb-net-cdc-mbim is not set
-# CONFIG_PACKAGE_kmod-usb-net-cdc-ncm is not set
+CONFIG_PACKAGE_kmod-usb-net-cdc-mbim=y
+CONFIG_PACKAGE_kmod-usb-net-cdc-ncm=y
 # CONFIG_PACKAGE_kmod-usb-net-cdc-subset is not set
 # CONFIG_PACKAGE_kmod-usb-net-dm9601-ether is not set
 CONFIG_PACKAGE_kmod-usb-net-hso=y
@@ -2669,7 +2669,7 @@ CONFIG_PACKAGE_kmod-usb-net-hso=y
 # CONFIG_PACKAGE_kmod-usb-net-pegasus is not set
 # CONFIG_PACKAGE_kmod-usb-net-pl is not set
 # CONFIG_PACKAGE_kmod-usb-net-qmi-wwan is not set
-CONFIG_PACKAGE_kmod-usb-net-rndis=y
+# CONFIG_PACKAGE_kmod-usb-net-rndis is not set
 CONFIG_PACKAGE_kmod-usb-net-rtl8150=y
 CONFIG_PACKAGE_kmod-usb-net-rtl8152=y
 # CONFIG_PACKAGE_kmod-usb-net-rtl8152-vendor is not set
@@ -4985,7 +4985,7 @@ CONFIG_PACKAGE_luci-app-firewall=y
 # CONFIG_PACKAGE_luci-app-mwol is not set
 # CONFIG_PACKAGE_luci-app-n2n is not set
 # CONFIG_PACKAGE_luci-app-naiveproxy is not set
-# CONFIG_PACKAGE_luci-app-natmap is not set
+CONFIG_PACKAGE_luci-app-natmap=y
 # CONFIG_PACKAGE_luci-app-netdata is not set
 # CONFIG_PACKAGE_luci-app-nextdns is not set
 # CONFIG_PACKAGE_luci-app-nfs is not set
@@ -5281,6 +5281,16 @@ CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-firewall-vi is not set
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-firewall-zh-tw is not set
+# CONFIG_PACKAGE_luci-i18n-natmap-da is not set
+# CONFIG_PACKAGE_luci-i18n-natmap-de is not set
+# CONFIG_PACKAGE_luci-i18n-natmap-es is not set
+# CONFIG_PACKAGE_luci-i18n-natmap-it is not set
+# CONFIG_PACKAGE_luci-i18n-natmap-pl is not set
+# CONFIG_PACKAGE_luci-i18n-natmap-pt-br is not set
+# CONFIG_PACKAGE_luci-i18n-natmap-ru is not set
+# CONFIG_PACKAGE_luci-i18n-natmap-tr is not set
+CONFIG_PACKAGE_luci-i18n-natmap-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-natmap-zh-tw is not set
 # CONFIG_PACKAGE_luci-i18n-opkg-ar is not set
 # CONFIG_PACKAGE_luci-i18n-opkg-bg is not set
 # CONFIG_PACKAGE_luci-i18n-opkg-bn is not set
@@ -6398,7 +6408,7 @@ CONFIG_PACKAGE_6in4=y
 # CONFIG_PACKAGE_addrwatch-mysql is not set
 # CONFIG_PACKAGE_addrwatch-stdout is not set
 # CONFIG_PACKAGE_addrwatch-syslog is not set
-CONFIG_PACKAGE_adguardhome=y
+# CONFIG_PACKAGE_adguardhome is not set
 # CONFIG_PACKAGE_ahcpd is not set
 # CONFIG_PACKAGE_alfred is not set
 # CONFIG_PACKAGE_alist is not set
@@ -6526,7 +6536,7 @@ CONFIG_PACKAGE_libipset=y
 # CONFIG_PACKAGE_mstpd is not set
 # CONFIG_PACKAGE_mtr is not set
 # CONFIG_PACKAGE_mwol is not set
-# CONFIG_PACKAGE_natmap is not set
+CONFIG_PACKAGE_natmap=y
 # CONFIG_PACKAGE_nbd is not set
 # CONFIG_PACKAGE_nbd-server is not set
 # CONFIG_PACKAGE_ncp is not set
