--- a/.github/workflows/ImmortalWrt_master_X86-64.yml
+++ b/.github/workflows/ImmortalWrt_master_X86-64.yml
@@ -6,7 +6,7 @@
 # Blog: https://p3terx.com
 #=================================================
 
-name: Build ImmortalWrt X86_64
+name: Build ImmortalWrt23.05 X86_64
 
 on:
   repository_dispatch:
@@ -394,7 +394,7 @@ jobs:
           sudo ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 
       - name: Download Bin Archive
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: bin-archive
           path: ${{ env.OPENWRT_ROOT_PATH }}
@@ -418,7 +418,7 @@ jobs:
         uses: mknejp/delete-release-assets@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}
+          tag: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}-master
           fail-if-no-assets: false
           fail-if-no-release: false
           assets: "*"
@@ -427,10 +427,10 @@ jobs:
         uses: ncipollo/release-action@main
         if: env.FIRMWARE_RELEASE_UPLOAD == 'true'
         with:
-          name: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}
+          name: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}-master
           allowUpdates: true
           replacesArtifacts: true
-          tag: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}
+          tag: ${{ env.DEVICE_TARGET }}-${{ env.DEVICE_SUBTARGET }}-master
           body: ${{ env.BUILD_DATE }}
           commit: ${{ env.CURRENT_BRANCH }}
           token: ${{ secrets.GITHUB_TOKEN }}
