--- a/files/etc/smartdns/custom.conf
+++ b/files/etc/smartdns/custom.conf
@@ -18,10 +18,26 @@ cache-size 50000000
 cache-file /tmp/smartdns.cache
 # 测速模式选择
 speed-check-mode tcp:443,tcp:80,ping
-# 过期缓存服务功能
+# 开启过期缓存
 serve-expired yes
 # 首次查询响应模式
 # [first-ping]: 最快ping响应地址模式，DNS上游最快查询时延+ping时延最短，查询等待与链接体验最佳;
 # [fastest-ip]: 最快IP地址模式，查询到的所有IP地址中ping最短的IP。需等待IP测速;
 # [fastest-response]: 最快响应的DNS结果，DNS查询等待时间最短，返回的IP地址可能不是最快。
 response-mode first-ping
+# Smartdns可以设置缓存预获取，避免缓存超时，配置预先获取后，smartdns将在域名超时前的5s内，
+# 重新进行域名查询。并对域名的热度进行排序。
+prefetch-domain yes
+# 配置过期缓存超时时间
+# 此时间表示过期缓存多长时间未访问，则从缓存中释放。
+serve-expired-ttl 259200
+# 配置过期缓存响应TTL
+# 此时间表示当缓存中域名TTL超时时，返回给客户端的TTL时间，让客户端在下列TTL时间后再次查询。
+serve-expired-reply-ttl 3
+# 过期缓存预获取时间
+# 此时间表示，过期缓存在多长时间未访问，主动进行预先获取，以避免IP无效；开启过期缓存后，prefetch的功能将和未开启不同。
+prefetch-domain yes
+serve-expired-prefetch-time 21600
+# 设置cache定时保存
+# 为避免cache因为系统或进程复位丢失，可以设置smartdns周期保存cache文件。
+cache-checkpoint-time 86400
